Remove negative margin to prevent button overlap

--- a/src/components/DynamicCTA.css
+++ b/src/components/DynamicCTA.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   margin-top: 60px;
-  margin-bottom: -60px;
   width: 100%;
 }
 
